Fixes #6152: disabled button label is unreadable (IE6)
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@13359 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/nihilo/form/Button.css
+++ b/themes/nihilo/form/Button.css
@@ -49,16 +49,8 @@
 .nihilo .dijitSpinnerDisabled .dijitButtonNode {
 	/* disabled state - inner */
 	border-color: #dedede;
-	/*color:#b4b4b4;*/
 	background:#fafafa url("../images/buttonDisabled.png") top repeat-x;
 	opacity: 0.60; /* Safari, Opera and Mozilla */
-}
-.dj_ie .nihilo .dijitButtonDisabled .dijitButtonNode *,
-.dj_ie .nihilo .dijitToggleButtonDisabled .dijitButtonNode *,
-.dj_ie .nihilo .dijitDropDownButtonDisabled .dijitButtonNode *,
-.dj_ie .nihilo .dijitComboButtonDisabled .dijitButtonNode *,
-.dj_ie .nihilo .dijitSpinnerDisabled .dijitButtonNode * {
-	filter: gray() alpha(opacity=50); /* IE */
 }
 
 .nihilo .dijitButtonHover .dijitButtonNode,
