--- a/themes/tundra/form/Button.css
+++ b/themes/tundra/form/Button.css
@@ -49,16 +49,8 @@
 .tundra .dijitSpinnerDisabled .dijitButtonNode {
 	/* disabled state - inner */
 	border-color: #d5d5d5 #bdbdbd #bdbdbd #d5d5d5;
-	/*color:#b4b4b4;*/
 	background:#e4e4e4 url("../images/buttonDisabled.png") top repeat-x;
 	opacity: 0.60; /* Safari, Opera and Mozilla */
-}
-.dj_ie .tundra .dijitButtonDisabled .dijitButtonNode *,
-.dj_ie .tundra .dijitToggleButtonDisabled .dijitButtonNode *,
-.dj_ie .tundra .dijitDropDownButtonDisabled .dijitButtonNode *,
-.dj_ie .tundra .dijitComboButtonDisabled .dijitButtonNode *,
-.dj_ie .tundra .dijitSpinnerDisabled .dijitButtonNode * {
-	filter: gray() alpha(opacity=50); /* IE */
 }
 
 .tundra .dijitButtonHover .dijitButtonNode,
